fixed up the nav bar overflow

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
     background: #f4f5f2;
     display: grid;
     grid-template-columns:100%;
-    grid-template-rows: 50px 50px 1fr auto;
+    grid-template-rows: 50px auto 1fr auto;
     grid-template-areas:
     "header"
     "nav"
@@ -24,22 +24,23 @@ header {
     grid-area: header;
     justify-self: center;
     font-size: 34px; 
-    /* padding-left: 20px; */
-    /* padding-right: 20px;    */
 }
 nav {
     grid-area: nav;
     width: 100%;
-    height: 50px;
+    height: auto;
     background: #8dc263;
     position: sticky;
     top: 0;
+    border-style:solid;
+    border-width: 1px;
+    border-bottom-color: #41525a;
+    z-index: 1;
 }
 nav ul {
     display: flex;
     margin: 0;
-    /* padding: 0 100px; */
-    /* float: right; */
+    flex-flow: row wrap;
 }
 nav ul li {
     list-style: none;
@@ -59,6 +60,8 @@ nav ul li a.active {
 } 
 main {
     grid-area: main;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 footer {
     grid-area: footer;
@@ -91,35 +94,38 @@ a svg:hover .footer_icon_color {
     margin-left: 30px;
 }
 .main-container {
-    padding-bottom: 50px;
+    /* margin-bottom: 50px; */
+    /* margin-top: 50px; */
 }
+/* The below is from the video content
 .home-container {
     display: grid;
     grid-template-columns:100%;
     grid-template-rows: 100%;
-    /* grid-template-areas:; */
-    /*"header"
-    "nav"
-    "main"
-    "footer";  */
-    /* padding-top: 20px;
-    padding-left: 20px; */
-    /* position: absolute; */
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translate(-50%,-50%); */
     width: 1000px; 
     height: 500px; 
-    /* display: flex;  */
-    /* margin-inline-start: 30px; */
     align-items: stretch;
+} */
+.home-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
+    /* padding-bottom: 20px; */
+    /* overflow: hidden;
+    z-index: -1; */
 }
 .home-container .box {
+    display: flex;
+    flex-flow: column;
+    border: 1px solid black;
+    /* padding: 2rem; */
     position: relative;
-    width: 250px;
-    height: 500px;
-    background: #ccc;
+    /* width: 250px; */
+    /* height: 500px; */
+    /* background: #ccc; */
     transition: 0.5s;
+    /* padding-top: 20px; */
+    /* padding-bottom: 20px; */
 }
 .home-container .box:hover {
     transform: scale(1.1);
@@ -127,47 +133,47 @@ a svg:hover .footer_icon_color {
     box-shadow: 0 5px 20px rgba(0,0,0,1);
 }
 .home-container .box .thumb {
-    position: absolute; 
-    width: 1000px;
+    /* position: absolute;  */
+    /* width: 1000px; */
     height: 250px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .home-container .box:nth-child(odd) .thumb {
     bottom: 0;
     left: 0;
 }
-.home-container .box .thumb img {
-    width: 100%;
-}
+/* .home-container .box .thumb img { */
+    /* width: 100%; */
+/* } */
 .home-container .box .details {
     position: absolute;
     width: 100%;
     height: 250px;
     overflow: hidden;
-    background: #262626;
+    /* background: #262626; */
 }
 .home-container .box:nth-child(even) .details {
     bottom: 0;
     left: 0;
 }
 .home-container .box:nth-child(1) .details {
-    background: #8553cb;
+    background: #8dc263;
 }
 .home-container .box:nth-child(2) .details {
-    background: #fe8f01;
+    background: #8dc263;
 }
 .home-container .box:nth-child(3) .details {
-    background: #79d400;
+    background: #8dc263;
 }
 .home-container .box:nth-child(4) .details {
-    background: #ff3b34;
+    background: #8dc263;
 }
 .home-container .box .details .content {
     position: absolute;
     top: calc(50% + 16px);
     transform: translateY(-50%);
     width: 100%;
-    padding: 20px;
+    /* padding: 20px; */
     box-sizing: border-box;
     text-align: center;
     transition: 0.5s;
@@ -177,19 +183,19 @@ a svg:hover .footer_icon_color {
 }
 .home-container .box .details .content .home-icon {
     font-size: 80px;
-    color: #fff;
+    color: #f4f5f2;
 }
 .home-container .box .details .content h3 {
     margin: 0;
     padding: 0;
     padding: 10px 0;
-    color: #fff;
+    color: #f4f5f2;
 }
 .home-container .box .details .content a {
     display: inline-block;
     padding: 5px 20px;
-    color: #fff;
-    border: 2px solid #fff;
+    color: #f4f5f2;
+    border: 2px solid #f4f5f2;
     text-decoration: none;
     transition: 0.5s;
     border-radius: 20px;
@@ -199,10 +205,10 @@ a svg:hover .footer_icon_color {
     transform: scale(1);
 }
 .home-container .box .details .content a:hover {
-    background: #fff;
+    background: #f4f5f2;
     color: #262626;
 }
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
     .home-container {
         width: 100%;
         height: auto;
@@ -237,9 +243,7 @@ a svg:hover .footer_icon_color {
         height: 250px;
         float: left;
     }
-}
-
-
+} */
 .home-icon {
     width: 80px;
 }
@@ -395,15 +399,15 @@ a svg:hover .footer_icon_color {
         ""
     } */
 /* } */ 
-@media only screen and (min-width: 992px) {
+/* @media only screen and (min-width: 992px) {
     .about-container {
         grid-template-columns: 1fr 1fr 1fr; 
         grid-template-rows: 1fr 1fr;
-        grid-template areas:
+        grid-template: areas:
         "profile-pic   empty         empty"
         "profile-words profile-words profile-words"
     }
-}
+} */
 .coding-container {
     display: grid;
     grid-template-columns:100%;
@@ -411,11 +415,13 @@ a svg:hover .footer_icon_color {
     grid-template-areas:
     " typewriter-text"
     "skillset-logos"; 
+    margin-top: -20px;
     /* text-align: center; */
 }
 
 .typewriter-text {
     grid-area: typewriter-text;
+    /* display: flex; */
     /* margin: 50px auto; */
     background: #41525a;
     padding-top: 20px;
@@ -474,7 +480,9 @@ a svg:hover .footer_icon_color {
 
 
 .skillset-logos {
-    grid-area: skillset-logos;
+    display: flex;
+    flex-direction: rows;
+    flex-wrap: wrap;
 }
 .skillset-logos p {
     text-align: center;
